# calculator-task

./: .gitmodules  CMakeLists.txt  Dockerfile  IntXHelper.h  README.md  WidgetCalculator.cxx  WidgetCalculator.h  calculator-task.desktop  main.cxx  rebuild_desktop_in_docker.sh
